--- a/app/globals.css
+++ b/app/globals.css
@@ -24,26 +24,6 @@
 }
 
 @layer utilities {
-  .sidebar {
-    @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black-800 px-7 py-10;
-  }
-
-  .left-sidebar {
-    @apply hidden lg:flex;
-  }
-
-  .right-sidebar {
-    @apply hidden xl:flex;
-  }
-
-  .clip-text {
-    @apply bg-clip-text text-transparent;
-  }
-
-  .bg-image {
-    @apply bg-black-900 bg-light-rays bg-cover bg-no-repeat;
-  }
-
   .header {
     @apply text-32-bold md:text-36-bold;
   }
@@ -56,24 +36,8 @@
     @apply relative flex-1 overflow-y-auto px-[5%];
   }
 
-  .sub-container {
-    @apply mx-auto flex size-full flex-col py-10;
-  }
-
-  .side-img {
-    @apply hidden h-full object-cover md:block;
-  }
-
-  .copyright {
-    @apply text-14-regular justify-items-end text-center text-dark-600 xl:text-left;
-  }
-
   .success-img {
     @apply m-auto flex flex-1 flex-col items-center justify-between gap-10 py-10;
-  }
-
-  .request-details {
-    @apply flex w-full flex-col items-center gap-8 border-y-2 border-dark-400 py-8 md:w-fit md:flex-row;
   }
 
   .admin-header, .team-header {
@@ -146,10 +110,6 @@
     @apply flex items-center justify-center;
   }
 
-  .flex-between {
-    @apply flex items-center justify-between;
-  }
-
   .text-36-bold {
     @apply text-[36px] leading-[40px] font-bold;
   }
@@ -168,10 +128,6 @@
 
   .text-16-semibold {
     @apply text-[16px] leading-[20px] font-semibold;
-  }
-
-  .text-16-regular {
-    @apply text-[16px] leading-[20px] font-normal;
   }
 
   .text-14-medium {
@@ -210,20 +166,8 @@
     @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 h-11 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
   }
 
-  .shad-input-icon {
-    @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 h-11 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
-  }
-
   .shad-textArea {
     @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
-  }
-
-  .shad-combobox-item {
-    @apply data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 !important;
-  }
-
-  .shad-combobox-trigger {
-    @apply h-11 !important;
   }
 
   .shad-select-trigger {
@@ -232,14 +176,6 @@
 
   .shad-select-content {
     @apply bg-dark-400 border-dark-500 !important;
-  }
-
-  .shad-dialog {
-    @apply bg-dark-400 border-dark-500 !important;
-  }
-
-  .shad-dialog button {
-    @apply focus:ring-0 focus:ring-offset-0 focus-visible:border-none focus-visible:outline-none focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
   }
 
   .shad-error {
@@ -258,22 +194,6 @@
     @apply border-b border-dark-400 text-light-200 !important;
   }
 
-  .shad-otp {
-    @apply w-full flex justify-between !important;
-  }
-
-  .shad-otp-slot {
-    @apply text-36-bold justify-center flex border border-dark-500 rounded-lg size-16 gap-4 !important;
-  }
-
-  .shad-alert-dialog {
-    @apply space-y-5 bg-dark-400 border-dark-500 outline-none !important;
-  }
-
-  .shad-sheet-content button {
-    @apply top-2 focus:ring-0 focus:ring-offset-0 focus-visible:border-none focus-visible:outline-none focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
-  }
-
   .input-phone {
     @apply mt-2 h-11 rounded-md px-3 text-sm border bg-dark-400 placeholder:text-dark-600 border-dark-500 !important;
   }
@@ -281,64 +201,129 @@
   .date-picker {
     @apply overflow-hidden border-transparent w-full placeholder:text-dark-600  h-11 text-14-medium rounded-md px-3 outline-none !important;
   }
-}
 
-.react-datepicker-wrapper.date-picker {
-  display: flex;
-  align-items: center;
-}
+  .passkey-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    padding-top: 0.5rem;
+    padding-left: 1.5rem;
+  }
 
-.react-datepicker,
-.react-datepicker__time,
-.react-datepicker__header,
-.react-datepicker__current-month,
-.react-datepicker__day-name,
-.react-datepicker__day,
-.react-datepicker-time__header {
-  background-color: #1a1d21 !important;
-  border-color: #363a3d !important;
-  color: #abb8c4 !important;
-}
+  .passkey-slot {
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin: 0.25rem;
+  }
 
-.react-datepicker__current-month,
-.react-datepicker__day-name,
-.react-datepicker-time__header {
-  color: #ffffff !important;
-}
+  @media (max-width: 768px) {
+    .passkey-slot {
+      width: 2rem;
+      height: 2rem;
+    }
+  }
 
-.react-datepicker__triangle {
-  fill: #1a1d21 !important;
-  color: #1a1d21 !important;
-  stroke: #1a1d21 !important;
-}
+  @media (max-width: 640px) {
+    .passkey-slot {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+  }
 
-.react-datepicker__time-list-item:hover {
-  background-color: #363a3d !important;
-}
+  .status-pending {
+    background-color: #f3a712;
+    color: white;
+  }
 
-.react-datepicker__input-container input {
-  background-color: #1a1d21 !important;
-  width: 100%;
-  outline: none;
-}
+  .status-scheduled {
+    background-color: #24ae7c;
+    color: white;
+  }
 
-.react-datepicker__day--selected {
-  background-color: #24ae7c !important;
-  color: #ffffff !important;
-  border-radius: 4px;
-}
+  .status-cancelled {
+    background-color: #d9534f;
+    color: white;
+  }
 
-.react-datepicker__time-list-item--selected {
-  background-color: #24ae7c !important;
-}
+  .custom-modal-width {
+    max-width: 800px;
+  }
 
-.react-datepicker__time-container {
-  border-left: 1px solid #363a3d !important;
-}
+  .custom-platform-modal {
+    padding-left: 2;
+    padding-right: 2;
+  }
 
-.react-datepicker__time-list-item {
-  display: flex !important;
-  align-items: center !important;
+  @media (max-width: 900px) {
+    .custom-modal-width {
+      max-width: 500px;
+    }
+  }
+
+  @media (max-width: 550px) {
+    .custom-modal-width {
+      max-width: 300px;
+    }
+
+    .custom-platform-modal {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
+  .login-radio {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 1em;
+    height: 1em;
+    border: 0.1em solid #d1d5db;
+    border-radius: 50%;
+    outline: none;
+    box-shadow: none;
+    background-color: transparent;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .login-radio:checked {
+    background-color: rgb(132, 204, 22);
+    border-color: rgb(132, 204, 22);
+  }
+
+  .login-radio:focus {
+    box-shadow: 0 0 0 0.1em rgba(132, 204, 22, 0.5);
+  }
+
+  .login-radio-button {
+    background-color: rgb(132, 204, 22);
+    color: white;
+    border-radius: 0.375rem;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: none;
+  }
+
+  .login-radio-button:hover {
+    background-color: rgb(102, 154, 12);
+  }
+
+  .login-radio-button:focus {
+    box-shadow: 0 0 0 0.1em rgba(132, 204, 22, 0.5);
+  }
+
+  @media (max-width: 700px) {
+    .scale-75 {
+      transform: scale(0.75);
+    }
+  }
 }
 
 .PhoneInputInput {
@@ -351,125 +336,4 @@
 
 .PhoneInputInput::placeholder {
   color: #1a1d21;
-}
-
-.passkey-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.passkey-slot {
-  width: 2.5rem;
-  height: 2.5rem;
-  text-align: center;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
-  margin: 0.25rem;
-}
-
-@media (max-width: 768px) {
-  .passkey-slot {
-    width: 2rem;
-    height: 2rem;
-  }
-}
-
-@media (max-width: 640px) {
-  .passkey-slot {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
-}
-
-.status-pending {
-  background-color: #f3a712;
-  color: white;
-}
-
-.status-scheduled {
-  background-color: #24ae7c;
-  color: white;
-}
-
-.status-cancelled {
-  background-color: #d9534f;
-  color: white;
-}
-
-.custom-modal-width {
-  max-width: 800px;
-}
-
-.custom-platform-modal {
-  padding-left: 2;
-  padding-right: 2;
-}
-
-@media (max-width: 900px) {
-  .custom-modal-width {
-    max-width: 500px;
-  }
-}
-
-@media (max-width: 550px) {
-  .custom-modal-width {
-    max-width: 300px;
-  }
-
-  .custom-platform-modal {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-.login-radio {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  width: 1em;
-  height: 1em;
-  border: 0.1em solid #d1d5db;
-  border-radius: 50%;
-  outline: none;
-  box-shadow: none;
-  background-color: transparent;
-  cursor: pointer;
-  position: relative;
-}
-
-.login-radio:checked {
-  background-color: rgb(132, 204, 22);
-  border-color: rgb(132, 204, 22);
-}
-
-.login-radio:focus {
-  box-shadow: 0 0 0 0.1em rgba(132, 204, 22, 0.5);
-}
-
-.login-radio-button {
-  background-color: rgb(132, 204, 22);
-  color: white;
-  border-radius: 0.375rem;
-  padding: 0.5rem 1rem;
-  text-align: center;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: none;
-}
-
-.login-radio-button:hover {
-  background-color: rgb(102, 154, 12);
-}
-
-.login-radio-button:focus {
-  box-shadow: 0 0 0 0.1em rgba(132, 204, 22, 0.5);
-}
-
-@media (max-width: 700px) {
-  .scale-75 {
-    transform: scale(0.75);
-  }
 }
